--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Git Tutorial</title>
 </head>
 <body>
-    <h1 class="site-header">My Site</h1>
+    <div class="site-header">
+        <span class="menu-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 36px;"></i></span>
+        My Site
+    </div>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
