--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Git Tutorial</title>
 </head>
+
 <body>
-    <div class="site-header">
-        <span class="menu-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>
+    <header class="site-header">
+        <span class="nav-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>
         My Site
-    </div>
+    </header>
+
+    <nav class="side-nav">
+        <ul class="menu-list">
+            <li class="menu-item">Home</li>
+            <li class="menu-item">Contact</li>
+            <li class="menu-item">About</li>
+        </ul>
+    </nav>
+    
     <script src="js/main.js" type="text/javascript"></script>
 </body>
+
 </html>
