add menu show/hide action

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="site-header">
-        <span class="nav-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>
+        <span class="nav-button" id="nav-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>
         My Site
     </header>
 
