refactor side nav slide show

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
 
     <nav class="side-nav">
+        <span id="close-btn">&times;</span>
         <ul class="menu-list">
             <li class="menu-item">Home</li>
             <li class="menu-item">Contact</li>
