--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 </head>
 
 <body>
-    <header class="site-header">
-        <span class="nav-button" id="nav-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>
-        My Site
-    </header>
-
     <nav class="side-nav">
         <span id="close-btn">&times;</span>
         <ul class="menu-list">
@@ -24,7 +19,20 @@
             <li class="menu-item">About</li>
         </ul>
     </nav>
-    
+
+    <div class="container">
+        <header class="site-header">
+            <span class="nav-button" id="nav-button"><i class="fa fa-bars" aria-hidden="true" style="font-size: 24px;"></i></span>            My Site
+        </header>
+
+        <main class="main">
+            <h1>My Content</h1>
+            <section class="main-section">
+                Main Section
+            </section>
+        </main>
+    </div>
+
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 
